methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:7: error: ')' expected but ';' found.
  avance(2);droite();avance(3);gauche();gauche()
           ^